# lorAI-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
LorAIHost/: ActionHandler.cs  AdvancedActions.cs  BattleActions.cs  HttpServer.cs  JsonHelper.cs  LorAIHost.csproj  LorAIHostMod.cs  NavigationActions.cs  ReflectionHelper.cs  StageModInfo.xml  StateExporter.cs  StoryActions.cs  UpdateHook.cs  UtilityActions.cs
docs/: mcp-tools.md
docs/api/: endpoints.md
docs/guide/: installation.md
docs/types/: index.md
lor_mcp/: __init__.py  config.py  proxy_server.py  server.py  setup.py  state.py  tools.py
scripts/: setup-mcp.py
